--- a/references.bib
+++ b/references.bib
@@ -1182,3 +1182,50 @@ journal = {Chapman & Hall/CRC Handbooks of Modern Statistical Methods},
 doi = {10.1201/9781420072884-c30}
 }
 
+@article{hajek1971discussion,
+  title={Discussion of ‘An essay on the logical foundations of survey sampling, part I’},
+  author={H{\'a}jek, Jaroslav},
+  journal={Foundations of Statistical Inference (Proc. Sympos., Univ. Waterloo, Ontario, 1970)},
+  pages={236},
+  year={1971},
+  publisher={Holt, Rinehart and Winston, p. 236, Toronto}
+}
+
+@inproceedings{bradley2023alsd,
+  title = {Active Learning sampling design (A-LSD): a new adaptive survey design paradigm to improve representativeness for subpopulations},
+  author = {Bradley, Valerie and Semenova, Elizaveta and Howes, Adam and Zhang, Mengyan and Eaton, Jeffrey and Sejdinovic, Dino and Flaxman, Seth},
+  booktitle = {Proceedings of the 9th International Conference on Infectious Disease Dynamics},
+  year = {2023}
+}
+
+@article{economist2023triple,
+  title = {A triple dividend: the health, social and economic gains from financing the HIV response in Africa},
+  author = {{Economist Impact}},
+  year = {2023},
+}
+
+@article{tatem2017worldpop,
+  title={WorldPop, open data for spatial demography},
+  author={Tatem, Andrew J},
+  journal={Scientific data},
+  volume={4},
+  number={1},
+  pages={1--4},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{world2017consolidated,
+  title={Consolidated guidelines on person-centred HIV patient monitoring and case surveillance},
+  author={World Health Organization and others},
+  year={2017},
+  publisher={World Health Organization}
+}
+
+@article{world2005guidelines,
+  title={Guidelines for measuring national HIV prevalence in population-based surveys},
+  author={World Health Organization and others},
+  year={2005},
+  publisher={World Health Organization}
+}
+
