--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -75,12 +75,12 @@ It is Bayesian in that I arrive at conclusions based on data using probability m
 The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
 The @ihme2019 found HIV to be the largest cause of disability adjusted life years (DALYs) in SSA among those one year and older (Figure \@ref(fig:gbd)).
 Using statistics to quantify the epidemic is an important part of the public health response, and the path towards disease control and elimination.
-However, there are numerous challenges involved in obtaining suitable estimates of relevant indicators.
+However, there are substantial challenges involved in obtaining suitable estimates of relevant indicators.
 
 The estimates in this thesis are based on data recorded from national household surveys or routinely collected from healthcare facilities.
 An important feature of this data is its location and the time at which it was collected.
 While diverse, spatio-temporal data have distinctive commonalities.
-I draw on modelling techniques well suited for this kind of data.
+I draw on modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
 Each project in this thesis, as well as the thesis itself, is accompanied by $\textsc{R}$ code, hosted on GitHub.
@@ -90,7 +90,7 @@ Each project in this thesis, as well as the thesis itself, is accompanied by $\t
 The structure of this thesis (Figure \@ref(fig:chapter-flowchart)) is as follows:
 
 * Chapter \@ref(hiv-aids): I begin by providing background on the HIV/AIDS epidemic, as well as describing the challenges faced by surveillance efforts.
-* Chapter \@ref(bayes-st): I then introduce the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation.
+* Chapter \@ref(bayes-st): I then introduce the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
 * Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed with analysis of a grid of pixels in mind.
 In disease mapping, we work using the districts of a country, which are not a grid.
 I evaluate the practical consequences of this this concern [@howes2023beyond].
@@ -98,7 +98,7 @@ I evaluate the practical consequences of this this concern [@howes2023beyond].
 The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections using available resources.
 I estimate the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assess the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators.
-Motivated by this model, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
+With this motivation, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
 I apply the method to data from Malawi, and analyse the consequences of inference method choice for policy relevant outcomes.
 Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
