--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -185,30 +185,75 @@ In Chapter \@ref(naomi-aghq), the Naomi small-area estimation model used to prod
 
 ## Survey methods
 
-Survey methods concern the design and analysis of survey data [@lohr2009sampling].
-Consider a population of individuals $j = 1, \ldots, N$ with outcomes of interest $y_j$.
-If a census were run, then the population population mean could be calculated as
-\begin{equation}
-\mu_N = \frac{1}{N} \sum_{j = 1}^N y_j.
-\end{equation}
-In practice, only a subset of the individuals will be sampled and their outcomes observed.
-Let $R_j$ be an indicator for whether or not $y_j$ is recorded.
-A weighted estimate of the population mean is
-\begin{equation}
-\mu_w = \frac{\sum_{j = 1}^N w_j R_j y_j}{\sum_{j = 1}^N w_j R_j},
-\end{equation}
-where $w_j > 0$ are survey weights.
-The additive error of the weighted estimate may be decomposed as follows [@meng2018statistical]
-\begin{equation}
-\mu_w - \mu_N = \rho_{Y, R} \times \sqrt{\frac{N - n}{n}} \times \sigma.
-\end{equation}
-Interpreting these three terms provides useful intuition about survey sampling.
-The data quality $\rho_{Y, R}$ measures the correlation between the outcome of interest and the observation mechanism.
-The data quantity $\sqrt{(N - n)/n}$.
-The problem difficultly $\sigma$ measures the intrinsic difficulty of the estimation problem, and is entirely independent of the sampling or analysis methods used. 
+Large national household surveys provide the highest quality population-level information about HIV indicators in SSA.
+Demographic and Health Surveys (DHS) are funded by USAID and run every three to five years in most countries.
+Population-based HIV Impact Assessment (PHIA) surveys are funded by PEPFAR and run in high HIV burden countries.
 
-Discuss how we weight then model following @chen2014use.
-Discuss how we ignore clustering structure.
+### Survey notation and key terms
+
+Consider a population of individuals $i = 1, \ldots, N$ and outcomes of interest $y_i$.
+If a census were run in, and all individuals responded, then the population mean $\bar y$ could be calculated exactly by
+\begin{equation}
+\bar y = \frac{1}{N} \sum_{i = 1}^N y_i.
+\end{equation}
+In practice, running a census is impractical and rarely possible.
+Usually, only a subset of the individuals are sampled, and only a subset of those have their outcome recorded due to non-response.
+Let $S_i$ be an indicator for whether or not individual $i$ is sampled, and $R_i$ be an indicator for whether or not $y_i$ is recorded.
+If $S_i = 0$ then $R_i = 0$, but if $S_i = 1$ then individual $i$ may not respond such that $R_i = 0$.
+The population mean may be estimated directly based on the recorded subset of the population by
+\begin{equation}
+\bar y_R = \frac{\sum_{i = 1}^N R_i y_i}{\sum_{i = 1}^N R_i} = \frac{\sum_{i = 1}^N R_i y_i}{m_R}, \label{eq:direct}
+\end{equation}
+where $m_R$ is the recorded sample size.
+
+A probability sample refers to the case when individuals are selected to be included in the survey at random.
+In a non-probability sample, inclusion or exclusion from the survey is deterministic.
+A simple random sample (SRS) is a probability sample where the sampling probability for each individual is equal, so that $\mathbb{P}(S_i = 1) = 1 / N$ for all $i$.
+The survey design is called complex when the sampling probabilities for each individual vary, such that $\mathbb{P}(S_i = 1) = \pi_i$ with $\sum_{i = 1}^N \pi_i = 1$ and $\pi_i > 0$ for all $i$.
+Complex survey designs can offer both greater practicality and statistical efficiency than SRS.
+However, particular care is required in analysing data collected using complex survey designs.
+In particular, the direct estimator given in Equation \@ref(eq:direct), which does not take into account the sampling probabilities, is biased even in the case of no non-response.
+That said, even for SRS, non-response is a ubiquitous problem which also must be treated with care.
+Let $\mathbb{P}(R_i = 1 \, | \, S_i = 1) = \upsilon_i$ be the probability of response of individual $i$ given inclusion in the survey.
+
+### Survey design
+
+1. Stratification into administrative units
+2. Primary sampling units (PSUs) and their populations
+3. Sample PSUs proportional to their population
+4. Select households using systematic sampling
+5. Visit each household and interview all adults
+
+### Survey analysis
+
+Suppose a complex survey is run with sampling probabilities $\pi_i$.
+Design weights $\delta_i = 1 / \pi_i$ express the number of population units represented by the $i$th sampled unit.
+Non-response weights $\gamma_i = 1 / \upsilon_i$ express the number of sampled units represented by the $i$th recorded unit. 
+Survey weights $\omega_i = \delta_i \times \gamma_i$ express the number of population units represented by the $i$th recorded unit.
+A weighted estimate [@hajek1971discussion] of the population mean is then
+\begin{equation}
+\bar y_\omega = \frac{\sum_{j = 1}^N \omega_j R_j y_j}{\sum_{j = 1}^N \omega_j R_j}. \label{eq:hajek}
+\end{equation}
+
+Decomposing the additive error of Equation \@ref(eq:hajek) provides useful intuition as to the utility of survey weighting [@meng2018statistical]
+\begin{align}
+\bar y_\omega - \bar y &= \frac{\mathbb{E}(R_i Y_i)}{\mathbb{E}(R_i)} - \mathbb{E}(Y_i) \\ 
+&= \frac{\mathbb{C}(R_i Y_i)}{\mathbb{E}(R_i)} \\
+&= \rho_{Y, R} \times \sqrt{\frac{N - m_R}{m_R}} \times \sigma_y.
+\end{align}
+The data quality $\rho_{Y, R}$ measures the correlation between the outcome of interest and the recording mechanism.
+The data quantity $\sqrt{(N - m_R)/m_R}$
+The problem difficultly $\sigma_y$ measures the intrinsic difficulty of the estimation problem, and is entirely independent of the sampling or analysis methods used.
+Under SRS then.
+
+The Kish effective sample size (ESS) [@kish1965survey] is
+\begin{equation}
+m^\star = \frac{\left(\sum_{i = 1}^N \omega_i \right)^2}{\sum_{i = 1}^N \omega_i^2}.
+\end{equation}
+We weight then model following @chen2014use.
+We ignore clustering structure.
 Discuss how all of this isn't great and that someone should figure this out.
 
-Nationally representative household surveys, such as the Demographic and Health Surveys (DHS) or Population-based HIV Impact Assessment (PHIA) surveys, provide the highest quality widely relevant information about HIV.
+### An adaptive design proposal
+
+@bradley2023alsd
